--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
+    "gulp-purgecss": "^2.1.0",
     "gulp-sass": "^4.0.2"
   }
 }
