Add carousel header, lastest chapter and rearrage scss file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "motion-station-first-projects",
-  "version": "1.0.0",
-  "description": "first-motion",
+  "name": "motion-station",
+  "version": "1.0.3",
+  "description": "UI of motion station",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,13 +9,13 @@
   "author": "An",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.4.1"
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
-    "gulp-purgecss": "^2.1.0",
     "gulp-sass": "^4.0.2"
   }
 }
